Rewritten intro texts on overview pages. Added labels.

--- a/enversed-framework.html
+++ b/enversed-framework.html
@@ -78,8 +78,8 @@
                         <div class="ui grid">
                             <div class="eight wide column">
                                 <h4 class="ui title header">hand collision</h4>
-                                <p>A system used to make a visual representation of your hand physical, whilst minimizing the chance of breaking the immersion of the game.</p>
-                                <p>It provides extra visualisation for your real life hand position, which only becomes visible once your hand starts making illegal movements, like going into a wall.</p>
+                                <p>I designed a system used to make a visual representation of your hand physical, whilst minimizing the chance of breaking the immersion of the game. This is based of information gathered from research, developers and input from the VR-community</p>
+                                <p>It’s a visualisation that’s an extension on Enversed’s human pawn module. It contains configuration settings (such as turning it off), but for the rest should work out-of-the-box.</p>
                             </div>
 
                             <div class="eight wide column">
@@ -103,6 +103,10 @@
                                         </div>
                                     </div>
                                 </a>
+
+                                <div class="ui red tag label">Analysis</div>
+                                <div class="ui green tag label">Design</div>
+                                <div class="ui blue tag label">Realisation</div>
                             </div>
                         </div>
                     </div>
@@ -111,7 +115,8 @@
                         <div class="ui grid">
                             <div class="eight wide column">
                                 <h4 class="ui title header">screenshot tool</h4>
-                                <p>There are scenarios where a user needs to capture the current visual state of the application. The screenshot tool is supposed to provide this service with certain ease-of-use features.</p>
+                                <p>Whilst the basis of a screenshot tool was already there, I made the extensions so screenshots can be made from any source (either another player or a special type of actor).</p>
+                                <p>Furthermore the screenshot tool now also allows for previewing on a render target, whilst keeping in mind the graphical load this would provide. In order to minimize this the preview generally makes sure not to render more than it needs to, but also contains failsafes (such as making sure the programmer can’t (accidentally) start up multiple preview without deliberately creating multiple tools).</p>
                             </div>
                             
                             <div class="eight wide column">
@@ -135,6 +140,9 @@
                                         </div>
                                     </div>
                                 </a>
+
+                                <div class="ui green tag label">Design</div>
+                                <div class="ui blue tag label">Realisation</div>
                             </div>
                         </div>
                     </div>
