--- a/license-spring.html
+++ b/license-spring.html
@@ -217,7 +217,7 @@
             <div class="content">
                 <p>When first working with their library, it was a recent overhaul of their C++ version (something we had been waiting for). Upon attempting to implement the dll we had several issues with memory access violations inside the dll itself.</p>
                 <p>Unable to find any relatable information on the internet I was left to try different methods of loading in the dll or to initialize their SDK (by playing around with pointers).</p>
-                <p>In the end I wrote a report about my findings and we sent that information back to License Spring to request for their aid. Later they came back with an updated version of the SDK that played along nicely with Unreal Engine 4.</p>
+                <p>In the end I <a href="https://www.dropbox.com/s/yon8waddrjgcmyo/License%20Spring%20SDK%20errors.pdf?dl=0" target="_blank">wrote a report <i class="fitted dropbox icon"></i></a> about my findings and we sent that information back to License Spring to request for their aid. Later they came back with an updated version of the SDK that played along nicely with Unreal Engine 4.</p>
             </div>
         </div>
 
