--- a/enversed-framework.html
+++ b/enversed-framework.html
@@ -107,6 +107,7 @@
                                 <div class="ui red tag label">Analysis</div>
                                 <div class="ui green tag label">Design</div>
                                 <div class="ui blue tag label">Realisation</div>
+                                <div class="ui purple tag label">Judgement</div>
                             </div>
                         </div>
                     </div>
