--- a/proto-backend.html
+++ b/proto-backend.html
@@ -137,6 +137,7 @@
 
                                 <div class="ui green tag label">Design</div>
                                 <div class="ui blue tag label">Realisation</div>
+                                <div class="ui pink tag label">Communication</div>
                             </div>
                         </div>
                     </div>
