--- a/enversed-framework.html
+++ b/enversed-framework.html
@@ -105,6 +105,7 @@
                                 </a>
 
                                 <div class="ui red tag label">Analysis</div>
+                                <div class="ui yellow tag label">Management</div>
                                 <div class="ui green tag label">Design</div>
                                 <div class="ui blue tag label">Realisation</div>
                                 <div class="ui purple tag label">Judgement</div>
@@ -142,6 +143,7 @@
                                     </div>
                                 </a>
 
+                                <div class="ui yellow tag label">Management</div>
                                 <div class="ui green tag label">Design</div>
                                 <div class="ui blue tag label">Realisation</div>
                             </div>
