--- a/proto-backend.html
+++ b/proto-backend.html
@@ -101,7 +101,8 @@
                                 </a>
 
                                 <div class="ui red tag label">Analysis</div>
-                                <div class="ui orange tag label">Advice</div>
+                                <div class="ui orange tag label">Advise</div>
+                                <div class="ui yellow tag label">Management</div>
                                 <div class="ui green tag label">Design</div>
                                 <div class="ui blue tag label">Realisation</div>
                             </div>
@@ -134,7 +135,8 @@
                                         </div>
                                     </div>
                                 </a>
-
+                                
+                                <div class="ui yellow tag label">Management</div>
                                 <div class="ui green tag label">Design</div>
                                 <div class="ui blue tag label">Realisation</div>
                                 <div class="ui pink tag label">Communication</div>
