--- a/proto-game-collection.html
+++ b/proto-game-collection.html
@@ -75,7 +75,7 @@
 
         <div class="ui container basic segment content">
             <div class="ui vertical center aligned segment">
-                <h1 class="ui title header">proto back-end</h1>
+                <h1 class="ui title header">proto game collection</h1>
                 <video class="ui fluid image" autoplay loop muted>
                     <source src="https://dl.dropboxusercontent.com/s/9sdrc6tpj1wvzk9/PROTO%20ALL.mp4?dl=0" type="video/mp4">
                     Your browser does not support the mp4 video tag.
@@ -307,7 +307,6 @@
                                 <div class="eight wide column">
                                     <h4 class="ui title header">SUBMARINE</h4>
                                     <p>In the submarine project, I created the system to put the players inside the system, which contained 2 iterations. Furthermore there’s also a bit of mathy stuff regarding UV-space (materials). This creates the analysis tag, albeit the analysis not being extremely structured.</p>
-                                    <div class="ui red tag label">Analysis</div>
                                     <div class="ui green tag label">Design</div>
                                     <div class="ui blue tag label">Realisation</div>
                                 </div>
