--- a/proto-aircycle.html
+++ b/proto-aircycle.html
@@ -66,10 +66,16 @@
                     </div>
                 </div>
 
-                <a class="item">
-                    About internship
-                </a>
-
+                <div class="ui simple dropdown item">
+                    About internship <i class="dropdown icon"></i>
+                    <div class="menu">
+                        <a class="item" href="reflection-evaluation.html">Reflection and evaluation</a>
+                
+                        <a class="item" href="enversed-tooling.html">Enversed tooling</a>
+                
+                        <a class="item" href="enversed-workflow.html">Enversed workflow</a>
+                    </div>
+                </div>
             </div>
         </div>
 
