Additions to reflection, rewritten evaluation

--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
                 <h1 class="ui title header">PORTFOLIO HOMEPAGE</h1>
             
                 <div class="intro">
-                    <p>Welcome to my graduate portfolio. Here you can find some rudimentary information about my assignment and the company. Below that you will find a quick-reference to the different categorised products, much like in the “portfolio abstract”-document you should have received.</p>
+                    <p>Welcome to my graduate portfolio. My name is Dennis Fokker and I’m a 4th year graduate GD&T student.</p>
+                    <p>Here you can find some rudimentary information about my assignment and the company. Below that you will find a quick-reference to the different categorised products, much like in the “portfolio abstract”-document you should have received.</p>
                     <p>The top menu can be used when wanting to manually traverse through the website. Sub-products will only be visible in the menu once on the product-category page (e.g. products > proto back-end).</p>
                 </div>
             </div>
@@ -73,7 +74,7 @@
                 <div class="ui divided grid">
                     <div class="eight wide column">
                         <h4 class="ui title header">About the assignment</h4>
-                        <p>The internship is focussed around multiple products, whether they’re full games, a plugin or an extension to Enversed’s framework. Each product has its own process, such as a research-, analysis/design- and implementation-phase. In some products a certain phase might be more prominent than in another and not each phase always produced a concrete product like a document.</p>
+                        <p>The internship is focussed around multiple products, whether they’re full games, a plugin or an extension to Enversed’s framework. These products can be placed under one of three categories: Enversed framework, PROTO back-end or PROTO game collection. Each product has its own process, such as a research-, analysis/design- and implementation-phase. In some products a certain phase might be more prominent than in another and not each phase always produced a concrete product like a document.</p>
                         <p>Not all products were known from the start of the internship. It was known that I would be working on the PROTO games, but obviously not specifically what components. This also meant there were pleasant surprises, such as working on the Arduino communication or License Spring plugin, as the original expectation was to work mostly on the game directly, rather than sub-systems they might use.</p>
                     </div>
 
