Updated homepage table.

--- a/index.html
+++ b/index.html
@@ -300,22 +300,22 @@
                         <tr>
                             <td>Interference test Rift S</td>
                             <td>-</td>
-                            <td>Document to be made</td>
+                            <td><a href="https://www.dropbox.com/s/os4rlkdu8fbrwgc/Interference test Rift S.pdf?dl=0" target="_blank">Report</a></td>
                             <td>-</td>
                             <td>-</td>
                             <td>-</td>
-                            <td>Document to be made</td>
+                            <td><a href="https://www.dropbox.com/s/os4rlkdu8fbrwgc/Interference test Rift S.pdf?dl=0" target="_blank">Report</a></td>
                             <td>-</td>
                             <td>-</td>
                         </tr>
                         <tr>
                             <td>Usability test wireless VIVE</td>
                             <td>-</td>
-                            <td>Document to be made</td>
+                            <td><a href="https://www.dropbox.com/s/x5rgmkgty7iy22n/Usability test wireless VIVE.pdf?dl=0" target="_blank">Report</a></td>
                             <td>-</td>
                             <td>-</td>
                             <td>-</td>
-                            <td>Document to be made</td>
+                            <td><a href="https://www.dropbox.com/s/x5rgmkgty7iy22n/Usability test wireless VIVE.pdf?dl=0" target="_blank">Report</a></td>
                             <td>-</td>
                             <td>-</td>
                         </tr>
