Added header links to overview pages

--- a/enversed-framework.html
+++ b/enversed-framework.html
@@ -83,7 +83,7 @@
                     <div class="eight wide column">
                         <div class="ui grid">
                             <div class="eight wide column">
-                                <h4 class="ui title header">hand collision</h4>
+                                <h4 class="ui title header"><a href="hand-collision.html">hand collision</a></h4>
                                 <p>I designed a system used to make a visual representation of your hand physical, whilst minimizing the chance of breaking the immersion of the game. This is based of information gathered from research, developers and input from the VR-community</p>
                                 <p>It’s a visualisation that’s an extension on Enversed’s human pawn module. It contains configuration settings (such as turning it off), but for the rest should work out-of-the-box.</p>
                             </div>
@@ -122,7 +122,7 @@
                     <div class="eight wide column">
                         <div class="ui grid">
                             <div class="eight wide column">
-                                <h4 class="ui title header">screenshot tool</h4>
+                                <h4 class="ui title header"><a href="screenshot-tool.html">screenshot tool</a></h4>
                                 <p>Whilst the basis of a screenshot tool was already there, I made the extensions so screenshots can be made from any source (either another player or a special type of actor).</p>
                                 <p>Furthermore the screenshot tool now also allows for previewing on a render target, whilst keeping in mind the graphical load this would provide. In order to minimize this the preview generally makes sure not to render more than it needs to, but also contains failsafes (such as making sure the programmer can’t (accidentally) start up multiple preview without deliberately creating multiple tools).</p>
                             </div>
