--- a/proto-backend.html
+++ b/proto-backend.html
@@ -82,7 +82,7 @@
                     <div class="eight wide column">
                         <div class="ui grid">
                             <div class="eight wide column">
-                                <h4 class="ui title header">arduino communication</h4>
+                                <h4 class="ui title header"><a href="arduino-communication.html">arduino communication</a></h4>
                                 <p>Some of the games in the PROTO game collection use input from physical machines. These machines work with a microcontroller (e.g. Arduino) which can communicate with the game through a plugin.</p>
                                 <p>Communication between the game and the hardware was defined with a protocol and the full list of tasks to implement the client’s initial design required were listen (and later adjusted based on client input).</p>
                             </div>
@@ -118,7 +118,7 @@
                     <div class="eight wide column">
                         <div class="ui grid">
                             <div class="eight wide column">
-                                <h4 class="ui title header">license spring</h4>
+                                <h4 class="ui title header"><a href="license-spring.html">license spring</a></h4>
                                 <p>Not all systems are viable to be made in-house. Licensing is currently one of them. <a href="https://licensespring.com/" target="_blank">License Spring</a> is the chosen framework to handle the licensing at Enversed Studios.</p>
                                 <p>In order the implement License Spring’s SDK into UE4, a plugin was created that mostly acts as a Façade. It simplifies communication by hiding certain parts of the implementation that should be static behind the plugin’s code (such as checking if there’s a valid license active), whilst allowing any actions a project might require to be custom made.</p>
                             </div>
