--- a/proto-game-collection.html
+++ b/proto-game-collection.html
@@ -101,7 +101,7 @@
                         <div class="eight wide column">
                             <div class="ui grid">
                                 <div class="eight wide column">
-                                    <h4 class="ui title header">AIRCYCLE</h4>
+                                    <h4 class="ui title header"><a href="proto-aircycle.html">AIRCYCLE</a></h4>
                                     <p>Aircycle is mostly here for completion. I haven’t made anything noteworthy in this project that I haven't implemented in another project. This is mostly the case since I wasn’t there are the start of the project.</p>
                                     <div class="ui green tag label">Design</div>
                                     <div class="ui blue tag label">Realisation</div>
@@ -135,7 +135,7 @@
                         <div class="eight wide column">
                             <div class="ui grid">
                                 <div class="eight wide column">
-                                    <h4 class="ui title header">BALLOON ESCAPE</h4>
+                                    <h4 class="ui title header"><a href="proto-balloon-escape.html">BALLOON ESCAPE</a></h4>
                                     <p>During balloon escape I create an extension upon the existing spline movement: regions. The regions were made to be easily editable, even by a non-programmer (given they understand the concepts of the underlying system).</p>
                                     <div class="ui green tag label">Design</div>
                                     <div class="ui blue tag label">Realisation</div>
@@ -171,7 +171,7 @@
                         <div class="eight wide column">
                             <div class="ui grid">
                                 <div class="eight wide column">
-                                    <h4 class="ui title header">CAR INVENTOR RACE</h4>
+                                    <h4 class="ui title header"><a href="proto-car-inventor-race.html">CAR INVENTOR RACE</a></h4>
                                     <p>The dynamic obstacles system was created during this project, and later also used in aircycle. The system is created in a way that only requires setup in the level, and no programming is needed to implement it.</p>
                                     <div class="ui green tag label">Design</div>
                                     <div class="ui blue tag label">Realisation</div>
@@ -205,7 +205,7 @@
                         <div class="eight wide column">
                             <div class="ui grid">
                                 <div class="eight wide column">
-                                    <h4 class="ui title header">INTRO EXPERIENCE</h4>
+                                    <h4 class="ui title header"><a href="proto-intro-experience.html">INTRO EXPERIENCE</a></h4>
                                     <p>Intro experience mostly contains a system to provide proper gameplay results and visuals. The creation of drawings for these games can be done by artists by creating and tagging splines. The backend system should then take care of the rest once spawned in the level.</p>
                                     <div class="ui green tag label">Design</div>
                                     <div class="ui blue tag label">Realisation</div>
@@ -241,7 +241,7 @@
                         <div class="eight wide column">
                             <div class="ui grid">
                                 <div class="eight wide column">
-                                    <h4 class="ui title header">LIGHT FACTORY</h4>
+                                    <h4 class="ui title header"><a href="proto-light-factory.html">LIGHT FACTORY</a></h4>
                                     <p>Whilst a lot of light factory is based around modules already in Enversed’s framework, the main part I worked on here was properly updating the visuals of the lamp during construction, which involved switching materials or their variables according to the scenario.</p>
                                     <div class="ui green tag label">Design</div>
                                     <div class="ui blue tag label">Realisation</div>
@@ -275,7 +275,7 @@
                         <div class="eight wide column">
                             <div class="ui grid">
                                 <div class="eight wide column">
-                                    <h4 class="ui title header">STEAM RACERS</h4>
+                                    <h4 class="ui title header"><a href="proto-steam-racers.html">STEAM RACERS</a></h4>
                                     <p>Steam racers doesn’t contain extremely notable products, aside from the implementation of the main gameflow that the game revolves around (when does it start and when does it end).</p>
                                     <div class="ui green tag label">Design</div>
                                     <div class="ui blue tag label">Realisation</div>
@@ -311,7 +311,7 @@
                         <div class="eight wide column">
                             <div class="ui grid">
                                 <div class="eight wide column">
-                                    <h4 class="ui title header">SUBMARINE</h4>
+                                    <h4 class="ui title header"><a href="proto-submarine.html">SUBMARINE</a></h4>
                                     <p>In the submarine project, I created the system to put the players inside the system, which contained 2 iterations. Furthermore there’s also a bit of mathy stuff regarding UV-space (materials). This creates the analysis tag, albeit the analysis not being extremely structured.</p>
                                     <div class="ui green tag label">Design</div>
                                     <div class="ui blue tag label">Realisation</div>
@@ -345,7 +345,7 @@
                         <div class="eight wide column">
                             <div class="ui grid">
                                 <div class="eight wide column">
-                                    <h4 class="ui title header">TRAIN HEIST</h4>
+                                    <h4 class="ui title header"><a href="proto-train-heist.html">TRAIN HEIST</a></h4>
                                     <p>Whilst teleportation movement is already a module in Enversed’s framework, I made an extension upon it to also display the play area as a preview. This mostly went over visual iterations.</p>
                                     <div class="ui green tag label">Design</div>
                                     <div class="ui blue tag label">Realisation</div>
